#38 Added underlying scaffolding to save read news for current user.
