# backend/src/main/java/at/ac/tuwien/sepm/groupphase/backend/controller/UserController.java
@@ -1,15 +1,15 @@
 package at.ac.tuwien.sepm.groupphase.backend.controller;
 
 import at.ac.tuwien.sepm.groupphase.backend.api.UserApi;
-import at.ac.tuwien.sepm.groupphase.backend.controller.mapper.BookingMapper;
+import at.ac.tuwien.sepm.groupphase.backend.controller.mapper.*;
 import at.ac.tuwien.sepm.groupphase.backend.controller.mapper.UserInfoMapper;
-import at.ac.tuwien.sepm.groupphase.backend.controller.mapper.UserInfoMapper;
-import at.ac.tuwien.sepm.groupphase.backend.controller.mapper.UserMapper;
 import at.ac.tuwien.sepm.groupphase.backend.dto.*;
 import at.ac.tuwien.sepm.groupphase.backend.entity.Booking;
+import at.ac.tuwien.sepm.groupphase.backend.entity.News;
 import at.ac.tuwien.sepm.groupphase.backend.entity.User;
 import at.ac.tuwien.sepm.groupphase.backend.security.AuthorizationRole;
 import at.ac.tuwien.sepm.groupphase.backend.service.BookingService;
+import at.ac.tuwien.sepm.groupphase.backend.service.NewsService;
 import at.ac.tuwien.sepm.groupphase.backend.service.TicketService;
 import at.ac.tuwien.sepm.groupphase.backend.service.UserService;
 import org.slf4j.Logger;
@@ -44,15 +44,19 @@ public class UserController implements UserApi {
     private final UserInfoMapper userInfoMapper;
     private final BookingService bookingService;
     private final BookingMapper bookingMapper;
+    private final NewsService newsService;
+    private final NewsMapper newsMapper;
 
     @Autowired
     public UserController(UserMapper userMapper, UserInfoMapper userInfoMapper, UserService userService,
-        BookingService bookingService, BookingMapper bookingMapper) {
+        BookingService bookingService, BookingMapper bookingMapper, NewsService newsService, NewsMapper newsMapper) {
         this.userMapper = userMapper;
         this.userInfoMapper = userInfoMapper;
         this.userService = userService;
         this.bookingService = bookingService;
         this.bookingMapper = bookingMapper;
+        this.newsService = newsService;
+        this.newsMapper = newsMapper;
     }
 
     @Override
@@ -167,6 +171,15 @@ public class UserController implements UserApi {
     public ResponseEntity<Void> removeMyAccount() {
         LOGGER.info("Remove self");
         userService.removeUser();
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    @Secured(AuthorizationRole.USER_ROLE)
+    public ResponseEntity<Void> addReadNewsOfUser(@Valid NewsDTO newsDTO) {
+        LOGGER.info("Add read news wiht id {}", newsDTO.getId());
+        News news = newsMapper.toEntity(newsDTO);
+        newsService.saveReadNewsForCurrentUser(news);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 }
